PostGIS 3.1.0
2020/XX/XX

* Deprecated signatures *
  - Function postgis_svn_version() replaced by postgis_lib_revision()
    (Sandro Santilli)

* Breaking changes *
  - #4577, Drop support for PostgreSQL 9.5 (Raúl Marín)
  - #4579, Drop postgis_proc_set_search_path.pl (Raúl Marín)

* New features *

* Enhancements *
  - #4539, Unify libm includes (Raúl Marín)
  - #4569, Allow unknown SRID geometry insertion into typmod SRID column (Paul Ramsey)
  - #4149, ST_Simplify(geom, 0) is now O(N).
           ST_Affine (ST_Translate, ST_TransScale, ST_Rotate) optimized.
           ST_SnapToGrid optimized. (Darafei Praliaskouski)
  - #4574, Link Time Optimizations enabled (Darafei Praliaskouski)
  - #4578, Add parallellism and cost properties to brin functions (Raúl Marín)
  - #4473, Silence yacc warnings (Raúl Marín)
  - #4589, Disable C asserts when building without "--enable-debug" (Raúl Marín)

* Bug fixes *
  - #4544, Fix leak when parsing a WKT geometry_list (Raúl Marín)
  - #4545, Fix leak in wkt_parser_triangle_new (Raúl Marín)
  - #4549, Fix several functions when the schema isn't the search_path (Raúl Marín)
  - #4546, Fix PLPGSQL functions missing the schema qualification (Raúl Marín)
  - #4558, Fix oversimplification of polygon inner rings (Raúl Marín)
  - #4588, Fix update when st_union(geometry) doesn't exist (Raúl Marín)
  - #4590, Fix pg_upgrade issue with st_linecrossingdirection (Raúl Marín)
  - #4592, Add missing CPPFLAGS in multiple Makefiles (Raúl Marín)


PostGIS 3.0.0
2019/10/xx
This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+, PostgreSQL 12, and GEOS 3.8.0

* New Features *
  - #2902, postgis_geos_noop (Sandro Santilli)
  - #4128, ST_AsMVT support for Feature ID (Stepan Kuzmin)
  - #4230, SP-GiST and GiST support for ND box operators overlaps, contains,
           within, equals (Esteban Zimányi and Arthur Lesuisse from Université
           Libre de Bruxelles (ULB), Darafei Praliaskouski)