@@ -203,3 +203,14 @@ ERROR:  ST_TileEnvelope: Invalid tile y value, 1
 233|POLYGON((87.5 -100,87.5 -87.5,100 -87.5,100 -100,87.5 -100))
 234|POLYGON((-100 87.5,-100 100,-87.5 100,-87.5 87.5,-100 87.5))
 235|POLYGON((0 -12.5,0 0,25 0,25 -12.5,0 -12.5))
+236|SRID=3857;POLYGON((-20037510 -20037510,-20037510 20037510,20037510 20037510,20037510 -20037510,-20037510 -20037510))
+237|SRID=3857;POLYGON((-22041261 -2003751,-22041261 20037510,2003751 20037510,2003751 -2003751,-22041261 -2003751))
+238|SRID=3857;POLYGON((-15028132.5 -20037510,-15028132.5 -5009377.5,5009377.5 -5009377.5,5009377.5 -20037510,-15028132.5 -20037510))
+239|SRID=3857;POLYGON((0 0,0 0,0 0,0 0,0 0))
+ERROR:  ST_TileEnvelope: Margin must not be less than -50%, margin=-0.510000
+241|SRID=3857;POLYGON((-4007502 -4007502,-4007502 4007502,4007502 4007502,4007502 -4007502,-4007502 -4007502))
+250|SRID=3857;POLYGON((-8296781.484375 4852834.453125,-8296781.484375 4891970.21484375,-8257645.72265625 4891970.21484375,-8257645.72265625 4852834.453125,-8296781.484375 4852834.453125))
+251|SRID=3857;POLYGON((-8300695.06054688 4848920.87695312,-8300695.06054688 4895883.79101562,-8253732.14648438 4895883.79101562,-8253732.14648438 4848920.87695312,-8300695.06054688 4848920.87695312))
+252|SRID=3857;POLYGON((-8316349.36523438 4833266.57226562,-8316349.36523438 4911538.09570312,-8238077.84179688 4911538.09570312,-8238077.84179688 4833266.57226562,-8316349.36523438 4833266.57226562))
+253|SRID=3857;POLYGON((-8375053.0078125 4774562.9296875,-8375053.0078125 4970241.73828125,-8179374.19921875 4970241.73828125,-8179374.19921875 4774562.9296875,-8375053.0078125 4774562.9296875))
+254|SRID=3857;POLYGON((-8285040.75585938 4864575.18164062,-8285040.75585938 4880229.48632812,-8269386.45117188 4880229.48632812,-8269386.45117188 4864575.18164062,-8285040.75585938 4864575.18164062))
